[build-system]
requires = ["setuptools >= 67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["sdh.otl"]

[project]
name = "sdh.otl"
description = "Django one time link generator and processor"
version = "1.0.1"
dependencies = [
  "Django>=3.2",
  "sdh.redis"
]
requires-python = ">= 3.8"
license = "BSD-2-Clause"
license-files = ["LICENSE"]

authors = [
    {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"},
    {name = "Oleksii (Alex) Koval", email = "alex@koval.kharkov.ua"}
]

maintainers = [
  {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"}
]

classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Framework :: Django',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries'
]

[project.urls]
Repository = "https://github.com/sdh-global/sdh-otl"
